--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,12 @@ body {
     font-size: 16px;
     font-weight: 400;
     color: #000000;
-    /* font-family: 'PT Sans', sans-serif; */
 }
+
+img {
+    max-width: 100%;
+    height: auto;
+  }
 
 a {
     text-decoration: none;
@@ -684,13 +688,123 @@ a {
     background-color: rgba(0, 0, 0, 0.3);
 }
 
+.slider {
+    position: relative;
+}
+
+.slider__controls {
+    z-index: 100;
+    position: absolute;
+    left: 47%;
+    bottom: 38px;
+}
+
+.slider__controls-item {
+    position: relative;
+    display: inline-block;
+
+    width: 10px;
+    height: 10px;
+    padding-top: 5px;
+
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.slider__controls-item:nth-child(2) {
+    margin-left: 7px;
+}
+
+.slider__controls-item::after {
+    z-index: 1;
+    content: "";
+    position: absolute;
+    left: 25%;
+   
+    width: 10px;
+    height: 10px;
+
+    background: #ffffff;
+    border-radius: 50%;
+}
+
+.slider__items {
+    position: relative;
+}
+
 .slider__item {
+    display: none;
+
     min-height: 266px;
     padding-top: 19px;
     padding-left: 25px;
-    
+
+    background-color: #7f5f52;
     background: url(../img/features/slide2.jpg) no-repeat;
     background-size: cover;
+}
+
+.slider__item:nth-child(2) {
+    background: url(../img/features/slide1.jpg) no-repeat;
+}
+
+.slider__arrow-right,
+.slider__arrow-left {
+    cursor: pointer;
+}
+
+.slider__arrow-right::before {
+    z-index: 80;
+    content: "";
+
+    position: absolute;
+    top: 114px;
+    right: 21px;
+
+    width: 22px;
+    height: 40px;
+
+    background: url(../img/features/icon-right.svg) no-repeat;
+}
+
+.slider__arrow-left::after {
+    z-index: 80;
+    content: "";
+
+    position: absolute;
+    top: 114px;
+    left: 25px;
+
+    width: 22px;
+    height: 40px;
+
+    background: url(../img/features/icon-left.svg) no-repeat;
+}
+
+#slide1:checked ~ .slider__items .slider__item:nth-child(1) {
+    display: block;
+
+}
+
+#slide2:checked ~ .slider__items .slider__item:nth-child(2) {
+    display: block;
+    left:70px;
+}
+
+#slide1:checked ~ .slider__controls .controls-item__one::before,
+#slide2:checked ~ .slider__controls .controls-item__two::before {
+    z-index: 5;
+    content: "";
+
+    position: absolute;
+    left: 25%;
+
+    width: 6px;
+    height: 6px;
+    margin: 2px;
+
+    background: #ee3643;
+    border-radius: 50%;
 }
 
 .slider__title {
@@ -1947,6 +2061,7 @@ a {
     background-color: #ffffff;
     border: 1px #e5e5e5 solid;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 .catalog-sort {
