--- a/css/style.css
+++ b/css/style.css
@@ -783,12 +783,10 @@ a {
 
 #slide1:checked ~ .slider__items .slider__item:nth-child(1) {
     display: block;
-
 }
 
 #slide2:checked ~ .slider__items .slider__item:nth-child(2) {
     display: block;
-    left:70px;
 }
 
 #slide1:checked ~ .slider__controls .controls-item__one::before,
@@ -1577,16 +1575,48 @@ a {
     text-decoration: none;
 }
 
-/* ======== Write-us============ */
-.write-us {
+/* ======== Modal============ */
+.modal {
     position: fixed;
     top: 50%;
     left: 50%;
-    z-index: 1000;
-
-    display: none;
 
     transform: translate(-50%, -50%);
+    z-index: 1000;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.modal-show {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+
+    animation-name: bounce;
+    animation-duration: 0.6s;
+}
+
+.modal-error {
+    animation-name: shake;
+    animation-duration: 0.6s;
+}
+
+@keyframes bounce {
+    0% {transform: translate(-2000px, -50%)}
+    50% {transform: translate(0px, -50%)}
+    100% {transform: translate(-50%, -50%)}
+}
+
+@keyframes shake {
+    0%, 100% {transform: translate(-50%, -50%)}
+    10%, 30%, 50%, 70%, 90% {transform: translate(-48%, -50%)}
+    20%, 40%, 60%, 80% {transform: translate(-52%, -50%)}
+}
+
+
+/* ======== Write-us============ */
+.write-us {
     background-color: #ffffff;
 }
 
@@ -1678,15 +1708,10 @@ a {
 }
 
 /* ======== Map ================= */
+/* Как бэкграунж сделать?? не получаеться!!!! */
 .map {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    z-index: 1000;
-
-    display: none;
-
-    transform: translate(-50%, -50%);
+    min-height: 446px;
+    min-width: 940px;
 }
 
 .map__inner {
@@ -2246,19 +2271,11 @@ a {
 
 /* ======== Adding-goods ================= */
 .adding-goods {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    z-index: 1000;
-
-    display: none;
     width: 620px;
 
     background-color: #ffffff;
     border-top: 7px solid #ee3643;
     box-shadow: 0 20px 45px rgba(41, 52, 73, 0.75);
-
-    transform: translate(-50%, -50%);
 }
 
 .adding-goods__content {
@@ -2307,6 +2324,16 @@ a {
     background-color: #ffffff;
     border-radius: 3px;
     transition: all 0.1s linear;
+}
+
+.adding-goods .btn-close {
+    position: absolute;
+    top: 8px;
+    right: 3px;
+
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
 }
 
 
